force-app/main/default/objects/VCC_Heartbeat_Template__c/fields/AutoRun_Schedule__c.field-meta.xml
<CustomField>
    <fullName>AutoRun_Schedule__c</fullName>
    <description>The frequency this template will auto run.</description>
    <label>AutoRun Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Every Hour</fullName>
            </value>
            <value>
                <fullName>Every 3 Hours</fullName>
            </value>
            <value>
                <fullName>Every 6 Hours</fullName>
            </value>
            <value>
                <fullName>Every 12 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>