force-app/main/default/objects/VCC_Heartbeat_Template__c/fields/Expected_Response__c.field-meta.xml
<CustomField>
    <fullName>Expected_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expected Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>